# codeforces-solutions

./: .gitignore  CMakeLists.txt  README.md  template.cpp
.github/: release.yaml
.github/workflows/: auto-labeler.yaml  codeforces-solutions-ci-cd.yaml  deploy.yaml  validate.yaml
source/contest/cfr-1034-div3/: 2123B.cpp  2123D.cpp  2123E.cpp  2123F.cpp
source/contest/cfr-1039-div2/: 2128A.cpp
source/problemset/rating-0800/: 1057A.cpp
src/00300-00399/: 0381A.cpp
src/01000-01099/: 01057A.cpp  1057A.cpp
src/01700-01799/: 01791C.cpp
src/02100-02199/: 02123A.cpp  02123D.cpp  02123E.cpp  2123B.cpp  2123C.cpp  2123E.cpp
src/02200-02299/: 02232A.cpp  02232C1.cpp
src/contests/cfr-1034-div3/: 2123A.cpp
src/problemset/rating-0800/: 1057A.cpp
src/problemsets/rating-0800/: 0381A.cpp  939A.cpp
test-data/contest/cfr-1034-div3/: 2123B.txt  2123C.txt  2123D.txt  2123E.txt  2123F.txt
test-data/contest/cfr-1039-div2/: 2128A.txt
test-data/problemset/rating-0800/: 1057A.txt
test-runner/: allTestRunner.cpp  singleTestRunner.cpp
tests/: allTestRunner.cpp  singleTestRunner.cpp
tests/00300-00399/: 00381A.txt
tests/01700-01799/: 01791C.txt
tests/02100-02199/: 02123A.txt
tests/02200-02299/: 02232A.txt  02232C1.txt
tests/contests/cfr-1034-div3/debug/: 2123A_debug.txt
tests/problemsets/rating-0800/: 939A.txt
